Save and load entire models

--- a/notebooks/COSI_res_reconstructions.ipynb
+++ b/notebooks/COSI_res_reconstructions.ipynb
@@ -64,18 +64,25 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
+     ]
+    }
+   ],
    "source": [
     "psfs = np.zeros((648, 486, 9))\n",
     "Ks = np.zeros((1, 1, 9))\n",
-    "model = UNet_multiwiener_resize(648, 486, psfs, Ks,\n",
-    "                         encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
-    "                         center_cs=1024,\n",
-    "                         decoding_cs=[512, 256, 128, 64, 24, 24],\n",
-    "                         skip_connections=[True, True, True, True, True, False])\n",
+    "# model = UNet_multiwiener_resize(648, 486, psfs, Ks,\n",
+    "#                          encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
+    "#                          center_cs=1024,\n",
+    "#                          decoding_cs=[512, 256, 128, 64, 24, 24],\n",
+    "#                          skip_connections=[True, True, True, True, True, False])\n",
     "\n",
-    "\n",
-    "model.load_weights('../models/multiwiener_unet/multiwiener_unet')\n",
+    "model = tf.keras.models.load_model('../whole_models/multiwiener_unet')\n",
     "pred_multi = np.clip(model(res), 0, 1).squeeze()"
    ]
   },
@@ -90,17 +97,25 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
+     ]
+    }
+   ],
    "source": [
     "psf = np.zeros((648, 486))\n",
     "K = 0\n",
-    "model = UNet_wiener(648, 486, psf, K, \n",
-    "                         encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
-    "                         center_cs=1024,\n",
-    "                         decoding_cs=[512, 256, 128, 64, 24, 24],\n",
-    "                         skip_connections=[True, True, True, True, True, False])\n",
+    "# model = UNet_wiener(648, 486, psf, K, \n",
+    "#                          encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
+    "#                          center_cs=1024,\n",
+    "#                          decoding_cs=[512, 256, 128, 64, 24, 24],\n",
+    "#                          skip_connections=[True, True, True, True, True, False])\n",
     "\n",
-    "model.load_weights('../models/wiener_unet/wiener_unet')\n",
+    "model = tf.keras.models.load_model('../whole_models/wiener_unet')\n",
     "pred_single = np.clip(model(res), 0, 1).squeeze()"
    ]
   },
@@ -115,15 +130,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
+     ]
+    }
+   ],
    "source": [
-    "model = UNet(648, 486,\n",
-    "                 encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
-    "                 center_cs=1024,\n",
-    "                 decoding_cs=[512, 256, 128, 64, 24, 24],\n",
-    "                 skip_connections=[True, True, True, True, True, False])\n",
+    "# model = UNet(648, 486,\n",
+    "#                  encoding_cs=[24, 64, 128, 256, 512, 1024],\n",
+    "#                  center_cs=1024,\n",
+    "#                  decoding_cs=[512, 256, 128, 64, 24, 24],\n",
+    "#                  skip_connections=[True, True, True, True, True, False])\n",
     "\n",
-    "model.load_weights('../models/basic_unet/basic_unet')\n",
+    "model = tf.keras.models.load_model('../whole_models/basic_unet')\n",
     "pred_unet = np.clip(model(res), 0, 1).squeeze()"
    ]
   },
@@ -152,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +224,13 @@
     "plt.show()\n",
     "# plt.close('all')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
